# orin-board

./: CAN 功能测试.md  Jetson Orin NX烧录+设备树更改？看这一篇就够了！.md  README.en.md  README.md  rtc设置.rar
USB3.0 设备树修改/: Orin nx type-c usb3.0配置.docx  kernel_tegra234-p3767-0000-p3509-a02.dtb  kernel_tegra234-p3767-0001-p3768-0000-a0.dtb  tegra234-p3767-0001-p3768-0000-a0.dtb
orin载板can控制达妙电机例程/: README.en.md  README.md
orin载板can控制达妙电机例程/dm_hw/: CMakeLists.txt
orin载板can控制达妙电机例程/dm_hw/include/: control_loop.h
orin载板can控制达妙电机例程/dm_hw/include/hardware_interface/: DmHW.h  damiao.h  socketcan.h
orin载板can控制达妙电机例程/dm_hw/src/: control_loop.cpp  main.cpp
orin载板can控制达妙电机例程/dm_hw/src/hardware_interface/: DmHW.cpp  damiao.cpp  socketcan.cpp
使能UART方法/: README.md  修改设备树.txt
